# ib-practica12-oop-gtests-exercism-JoseLozanoArmas

./: README.md
complejos/: CMakeLists.txt
complejos/src/: complejos.h  complejos_funciones.cc  complejos_main.cc  modificacion.cc
fecha/: CMakeLists.txt
fecha/src/:    fecha.h  fecha_funciones.cc  fecha_main.cc  fichero_entrada.txt  fichero_salida.txt  improvisar.cc  prueba.cc  si.cc  testeo  testeo.cc  versionmarcos.cc
